--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
     "build": "rimraf ./dist & react-app-rewired build"
   },
   "dependencies": {
+    "antd": "4.16.0",
     "axios": "^0.26.0",
+    "babel-plugin-import": "^1.13.0",
     "chalk": "^4.1.2",
+    "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
+    "customize-cra": "^0.9.1",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-body": "^4.1.1",
     "koa-favicon": "^2.1.0",
@@ -30,32 +36,29 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
     "koa2-cors": "^2.0.6",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
     "log4js": "^6.3.0",
     "mongoose": "^5.7.5",
     "node-cache": "^5.1.2",
     "node-schedule": "^2.1.0",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
+    "nodejs-websocket": "^1.7.2",
     "nodemailer": "^6.5.0",
-    "urlparse": "0.0.1",
-    "jsonwebtoken": "^8.5.1",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.5",
-    "js-cookie": "^3.0.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.12.21",
-    "customize-cra": "^0.9.1",
     "react-router-dom": "^5.2.0",
-    "antd": "4.16.0",
-    "babel-plugin-import": "^1.13.0",
-    "classnames": "^2.3.1",
+    "react-scripts": "4.0.3",
     "stylus": "^0.54.7",
-    "lodash": "^4.17.15",
     "stylus-loader": "^3.0.2",
-    "react-scripts": "4.0.3"
+    "urlparse": "0.0.1",
+    "react-websocket": "^2.1.0"
   },
   "devDependencies": {
+    "mobx-react": "^7.5.0",
     "nodemon": "^1.19.1",
     "rimraf": "^3.0.2"
   },
