--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "kill": "kill `lsof -t -i:6001`",
     "clear": "rimraf ./logs/*",
     "start": "cross-env NODE_ENV=development node app.js",
-    "prd": "cross-env NODE_ENV=production pm2 start app.js -n server-lsp",
+    "prd": "cross-env NODE_ENV=production pm2 start app.js -n lrs",
     "front": "react-app-rewired start",
     "dev": "npm run start & npm run front",
     "build": "rimraf ./dist & react-app-rewired build"
